--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "15.5.7",
     "node-telegram-bot-api": "^0.66.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -33,7 +33,8 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/bun": "latest"
   },
   "overrides": {
     "@types/react": "19.2.2",
